--- a/RTChart/liveChart.html
+++ b/RTChart/liveChart.html
@@ -24,7 +24,7 @@
     
     //Configure the socket connection
     myApp.config(["wsClientProvider",function (wsClientProvider) {
-      wsClientProvider.setToken("UjkyNTI2OTk1RQ==");
+      wsClientProvider.setToken("<YOUR_TOKEN>");
       wsClientProvider.setPublishChannel("requestChannel");
       wsClientProvider.setSubscribeChannel("responseChannel");
     }]);
