--- a/RTChart/native/liveChart.html
+++ b/RTChart/native/liveChart.html
@@ -30,7 +30,7 @@
        
        
         var wsDto = {
-        	method: "RTChart/data", // the API (script) to execute on your scriptr.io account
+        	method: "RTChart/native/data", // the API (script) to execute on your scriptr.io account
         	params: {}, // the message to send. Should be {msg:some_stringified_object_or_string}
         	onSuccess: consumeData, // success callback
         	onFailure: consumeData // failure callback
