--- a/RTChart/native/liveChart.html
+++ b/RTChart/native/liveChart.html
@@ -18,7 +18,7 @@
   </head>
   <script>
 
-    var token = "UjkyNTI2OTk1RQ==";
+    var token = "<YOUR_TOKEN>";
     var subscribeChannel = "responseChannel";
     var scriptName = "RTChart/native/data";
     
